--- a/homework_17/index.html
+++ b/homework_17/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Practice</title>
+    <title>Grid</title>
   </head>
   <body>
     <div class="wrapper">
@@ -26,7 +26,9 @@
               <div class="best-seller-top__cards">
                 <div class="sale-bunner">
                   <div class="sale-bunner__img">
-                    <img src="img/ecobazar/card-bg_1.avif" alt="sale picture">
+                    <img
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'"
+                      src="img/ecobazar/card-bg_1.avif" alt="sale picture">
                   </div>
                   <div class="sale-bunner__content">
                     <div class="sale-bunner__info">
@@ -43,7 +45,8 @@
                 <div class="product-card">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_2.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -96,7 +99,8 @@
                 <div class="product-card">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_3.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -149,7 +153,8 @@
                 <div class="product-card">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_4.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -202,7 +207,8 @@
                 <div class="product-card">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_5.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -260,7 +266,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_1.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -313,7 +320,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_6.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -366,7 +374,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_3.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -422,7 +431,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_7.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -475,7 +485,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_8.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -529,7 +540,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_9.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -585,7 +597,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_10.avif"
-                      alt="product">
+                      alt="product onerror=" this.onerror=null;
+                      this.src='img/placeholder.avif'"">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -638,7 +651,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_5.avif"
-                      alt="product">
+                      alt="product"
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -692,7 +706,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_11.avif"
-                      alt="product">
+                      alt="product" onerror=" this.onerror=null;
+                      this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -745,7 +760,8 @@
               </div>
               <div class="sale-bunner">
                 <div class="sale-bunner__img">
-                  <img src="img/ecobazar/card-bg_2.avif" alt="sale picture">
+                  <img src="img/ecobazar/card-bg_2.avif" alt="sale picture"
+                    onerror="this.onerror=null; this.src='img/placeholder.avif'">
                 </div>
                 <div class="sale-bunner__content">
                   <div class="sale-bunner__info">
@@ -771,9 +787,10 @@
               </h2>
               <div class="flavor-card">
                 <div class="flavor-card__body">
-                  <div class="flavor-card__img">
-                    <img src="img/blossomia/flavor_1.avif" alt="Flavor">
-                  </div>
+                  <a href="#" class="flavor-card__img">
+                    <img src="img/blossomia/flavor_1.avif" alt="Flavor"
+                      onerror="this.onerror=null; this.src='img/placeholder_beige.avif'">
+                  </a>
                   <div class="flavor-card__content">
                     <div class="flavor-card__info">
                       <h3 class="flavor-card__title">
@@ -794,9 +811,10 @@
               </div>
               <div class="flavor-card">
                 <div class="flavor-card__body">
-                  <div class="flavor-card__img">
-                    <img src="img/blossomia/flavor_2.avif" alt="Flavor">
-                  </div>
+                  <a href="#" class="flavor-card__img">
+                    <img src="img/blossomia/flavor_2.avif" alt="Flavor"
+                      onerror="this.onerror=null; this.src='img/placeholder_beige.avif'">
+                  </a>
                   <div class="flavor-card__content">
                     <div class="flavor-card__info">
                       <h3 class="flavor-card__title">
@@ -817,9 +835,10 @@
               </div>
               <div class="flavor-card">
                 <div class="flavor-card__body">
-                  <div class="flavor-card__img">
-                    <img src="img/blossomia/flavor_3.avif" alt="Flavor">
-                  </div>
+                  <a href="#" class="flavor-card__img">
+                    <img src="img/blossomia/flavor_3.avif" alt="Flavor"
+                      onerror="this.onerror=null; this.src='img/placeholder_beige.avif'">
+                  </a>
                   <div class="flavor-card__content">
                     <div class="flavor-card__info">
                       <h3 class="flavor-card__title">
@@ -840,9 +859,10 @@
               </div>
               <div class="flavor-card">
                 <div class="flavor-card__body">
-                  <div class="flavor-card__img">
-                    <img src="img/blossomia/flavor_4.avif" alt="Flavor">
-                  </div>
+                  <a href="#" class="flavor-card__img">
+                    <img src="img/blossomia/flavor_4.avif" alt="Flavor"
+                      onerror="this.onerror=null; this.src='img/placeholder_beige.avif'">
+                  </a>
                   <div class="flavor-card__content">
                     <div class="flavor-card__info">
                       <h3 class="flavor-card__title">
@@ -863,9 +883,10 @@
               </div>
               <div class="flavor-card">
                 <div class="flavor-card__body">
-                  <div class="flavor-card__img">
-                    <img src="img/blossomia/flavor_5.avif" alt="Flavor">
-                  </div>
+                  <a href="#" class="flavor-card__img">
+                    <img src="img/blossomia/flavor_5.avif" alt="Flavor"
+                      onerror="this.onerror=null; this.src='img/placeholder_beige.avif'">
+                  </a>
                   <div class="flavor-card__content">
                     <div class="flavor-card__info">
                       <h3 class="flavor-card__title">
@@ -886,9 +907,10 @@
               </div>
               <div class="flavor-card">
                 <div class="flavor-card__body">
-                  <div class="flavor-card__img">
-                    <img src="img/blossomia/flavor_6.avif" alt="Flavor">
-                  </div>
+                  <a href="#" class="flavor-card__img">
+                    <img src="img/blossomia/flavor_6.avif" alt="Flavor"
+                      onerror="this.onerror=null; this.src='img/placeholder_beige.avif'">
+                  </a>
                   <div class="flavor-card__content">
                     <div class="flavor-card__info">
                       <h3 class="flavor-card__title">
