--- a/homework_17/index.html
+++ b/homework_17/index.html
@@ -37,9 +37,9 @@
                         <span>75% off</span>
                       </div>
                     </div>
-                    <button type="button" class="button-w-arrow">
+                    <a href="#" class="button-w-arrow">
                       Shop Now
-                    </button>
+                    </a>
                   </div>
                 </div>
                 <div class="product-card">
@@ -597,8 +597,8 @@
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
                     <img src="img/ecobazar/products/product_10.avif"
-                      alt="product onerror=" this.onerror=null;
-                      this.src='img/placeholder.avif'"">
+                      alt="product onerror="
+                      onerror="this.onerror=null; this.src='img/placeholder.avif'">
                   </a>
                   <div class="product-card__content">
                     <div class="product-card__info">
@@ -770,9 +770,9 @@
                       <span>Save 37%</span> on Every Order
                     </div>
                   </div>
-                  <button type="button" class="button-w-arrow">
+                  <a href="#" class="button-w-arrow">
                     Shop Now
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -930,9 +930,9 @@
                 </div>
               </div>
 
-              <button class="more-btn">
+              <a href="#" class="more-btn">
                 <span class="more-btn__inner">Open More</span>
-              </button>
+              </a>
             </div>
           </div>
         </div>
